Added Golf to Sports

--- a/sports/index.html
+++ b/sports/index.html
@@ -74,6 +74,7 @@
 					<a href="baseball/popup.html" class="fancy fancybox.iframe"><div class="sport">Baseball</div></a>
 					<a href="softball/popup.html" class="fancy fancybox.iframe"><div class="sport">Softball</div></a>
 					<a href="track/popup.html" class="fancy fancybox.iframe"><div class="sport">Track & Field</div></a>
+					<a href="golf/popup.html" class="fancy fancybox.iframe"><div class="sport">Golf</div></a>
 				</div>
 				
 				
