Updated one little thing

--- a/sports/index.html
+++ b/sports/index.html
@@ -93,7 +93,7 @@
 	
 		<!--#include virtual="../footer.shtml"-->
 		
-		<span id="edited_by">Last edited by ________ on _________.</span>
+		<span id="edited_by">Last edited by Alex LaFroscia on August 23, 2012.</span>
 
 	</div><!-- end "footer" -->
 
