--- a/template.html
+++ b/template.html
@@ -13,18 +13,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<meta http-equiv="X-UA-Compatible" content="chrome=1">
 	
-	<link rel="stylesheet" href="css/bootstrap.css" type="text/css">
-	<link rel="stylesheet" href="css/bootstrap-responsive.css" type="text/css">
-	<link rel="stylesheet" href="css/jquery.fancybox.css" type="text/css">
-	<link rel="stylesheet" href="css.css" type="text/css">
-	<link rel="stylesheet" href="css/all.css" type="text/css">
-	<link rel="stylesheet" href="css/footer.css" type="text/css">
+	<link rel="stylesheet" href="/~alex/Harbinger2/css/bootstrap.css" type="text/css">
+	<link rel="stylesheet" href="/~alex/Harbinger2/css/bootstrap-responsive.css" type="text/css">
+	<link rel="stylesheet" href="/~alex/Harbinger2/css/jquery.fancybox.css" type="text/css">
+	<link rel="stylesheet" href="/~alex/Harbinger2/css/all.css" type="text/css">
+	<link rel="stylesheet" href="/~alex/Harbinger2/css/footer.css" type="text/css">
 	
-	<script src="js/jquery-1.8.0.min.js"></script>
-	<script src="js/bootstrap.js" type="text/javascript"></script>
-	<script src="js/jquery.news_stories.js" type="text/javascript"></script>
-	<script src="js/jquery.fancybox.pack.js" type="text/javascript"></script>
-	<script src="js/jquery.mobile-1.2.0-alpha.1.min.js" type="text/javascript"></script>
+	<script src="/~alex/Harbinger2/js/jquery-1.8.0.min.js"></script>
+	<script src="/~alex/Harbinger2/js/bootstrap.js" type="text/javascript"></script>
+	<script src="/~alex/Harbinger2/js/jquery.fancybox.pack.js" type="text/javascript"></script>
+	<script src="/~alex/Harbinger2/js/jquery.mobile-1.2.0-alpha.1.min.js" type="text/javascript"></script>
 	
 	<script type="text/javascript">
 	
