Replicated the basic sports grid using Bootstrap

--- a/sports/index.html
+++ b/sports/index.html
@@ -13,7 +13,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<meta http-equiv="X-UA-Compatible" content="chrome=1">
 	
-	<link rel="stylesheet" href="/~alex/Harbigner2/css/jquery.fancybox.css" type="text/css">
+	<link rel="stylesheet" href="/~alex/Harbinger2/css/jquery.fancybox.css" type="text/css">
 	<link rel="stylesheet" href="css.css" type="text/css">
 	<link rel="stylesheet" href="/~alex/Harbinger2/css/all.css" type="text/css">
 	<link rel="stylesheet" href="/~alex/Harbinger2/css/footer.css" type="text/css">
@@ -46,13 +46,49 @@
 	
 	<!--#include virtual="/~alex/Harbinger2/header.shtml"-->
 	
-	<div id="fallbox" class="box">
-		<div class="row">
-			<div class="span2 offset2">
-				
-			</div>
-		</div><!-- end "row"-->
-	</div>			
+	<div id="grey_background">
+		<div class="container">
+		
+			<div id="fallbox">
+				<div class="row">
+					<a href="football/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Football</div></a>
+					<a href="cross_country/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Cross Country</div></a>
+					<a href="boys_soccer/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Boys Soccer</div></a>
+				</div><!-- end "row"-->
+				<div class="row">
+					<a href="girls_soccer/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Girls Soccer</div></a>
+					<a href="field_hockey/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Field Hockey</div></a>
+					<a href="volleyball/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Volleyball</div></a>
+				</div><!-- end "row" -->
+			</div><!-- end "fallbox" -->
+			
+			<div id="winterbox">
+				<div class="row">
+					<a href="girls_basketball/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Girls Basketball</div></a>
+					<a href="boys_basketball/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Boys Basketball</div></a>
+					<a href="wrestling/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Wrestling</div></a>
+				</div><!-- end "row"-->
+				<div class="row">
+					<a href="winter_track/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Winter Track</div></a>
+					<a href="bowling/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Bowling</div></a>
+				</div><!-- end "row"-->
+			</div><!-- end "winterbox" -->
+			
+			<div id="springbox" class="box">
+				<div class="row">
+					<a href="boys_lax/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Boys Lacrosse</div></a>
+					<a href="girls_lax/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Girls Lacrosse</div></a>
+					<a href="baseball/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Baseball</div></a>
+				</div><!-- end "row"-->
+				<div class="row">
+					<a href="softball/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Softball</div></a>
+					<a href="track/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Track & Field</div></a>
+					<a href="golf/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Golf</div></a>
+				</div><!-- end "row"-->
+			</div><!-- end "springbox" -->
+		
+		</div><!-- end "container"-->
+	</div><!-- end "grey background" -->
 
 
 	<div id="footer">
@@ -64,7 +100,6 @@
 				<span id="edited_by">Last edited by Alex LaFroscia on August 22, 2012.</span>
 			</div>
 		</div>
-	</div> <!-- end "footer" -->
 
 </body>
 
