--- a/sports/index.html
+++ b/sports/index.html
@@ -43,52 +43,56 @@
 </head>
 
 <body>
+
+	<div id="content">
 	
-	<!--#include virtual="/~alex/Harbinger2/header.shtml"-->
-	
-	<div id="grey_background">
-		<div class="container">
+		<!--#include virtual="/~alex/Harbinger2/header.shtml"-->
 		
-			<div id="fallbox">
-				<div class="row">
-					<a href="football/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Football</div></a>
-					<a href="cross_country/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Cross Country</div></a>
-					<a href="boys_soccer/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Boys Soccer</div></a>
-				</div><!-- end "row"-->
-				<div class="row">
-					<a href="girls_soccer/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Girls Soccer</div></a>
-					<a href="field_hockey/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Field Hockey</div></a>
-					<a href="volleyball/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Volleyball</div></a>
-				</div><!-- end "row" -->
-			</div><!-- end "fallbox" -->
+		<div id="grey_background">
+			<div class="container">
 			
-			<div id="winterbox">
-				<div class="row">
-					<a href="girls_basketball/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Girls Basketball</div></a>
-					<a href="boys_basketball/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Boys Basketball</div></a>
-					<a href="wrestling/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Wrestling</div></a>
-				</div><!-- end "row"-->
-				<div class="row">
-					<a href="winter_track/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Winter Track</div></a>
-					<a href="bowling/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Bowling</div></a>
-				</div><!-- end "row"-->
-			</div><!-- end "winterbox" -->
+				<div id="fallbox">
+					<div class="row">
+						<a href="football/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Football</div></a>
+						<a href="cross_country/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Cross Country</div></a>
+						<a href="boys_soccer/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Boys Soccer</div></a>
+					</div><!-- end "row"-->
+					<div class="row">
+						<a href="girls_soccer/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Girls Soccer</div></a>
+						<a href="field_hockey/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Field Hockey</div></a>
+						<a href="volleyball/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Volleyball</div></a>
+					</div><!-- end "row" -->
+				</div><!-- end "fallbox" -->
+				
+				<div id="winterbox">
+					<div class="row">
+						<a href="girls_basketball/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Girls Basketball</div></a>
+						<a href="boys_basketball/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Boys Basketball</div></a>
+						<a href="wrestling/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Wrestling</div></a>
+					</div><!-- end "row"-->
+					<div class="row">
+						<a href="winter_track/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Winter Track</div></a>
+						<a href="bowling/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Bowling</div></a>
+					</div><!-- end "row"-->
+				</div><!-- end "winterbox" -->
+				
+				<div id="springbox" class="box">
+					<div class="row">
+						<a href="boys_lax/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Boys Lacrosse</div></a>
+						<a href="girls_lax/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Girls Lacrosse</div></a>
+						<a href="baseball/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Baseball</div></a>
+					</div><!-- end "row"-->
+					<div class="row">
+						<a href="softball/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Softball</div></a>
+						<a href="track/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Track & Field</div></a>
+						<a href="golf/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Golf</div></a>
+					</div><!-- end "row"-->
+				</div><!-- end "springbox" -->
 			
-			<div id="springbox" class="box">
-				<div class="row">
-					<a href="boys_lax/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Boys Lacrosse</div></a>
-					<a href="girls_lax/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Girls Lacrosse</div></a>
-					<a href="baseball/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Baseball</div></a>
-				</div><!-- end "row"-->
-				<div class="row">
-					<a href="softball/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Softball</div></a>
-					<a href="track/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Track & Field</div></a>
-					<a href="golf/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Golf</div></a>
-				</div><!-- end "row"-->
-			</div><!-- end "springbox" -->
+			</div><!-- end "container"-->
+		</div><!-- end "grey background" -->
 		
-		</div><!-- end "container"-->
-	</div><!-- end "grey background" -->
+	</div><!-- end "content" -->
 
 
 	<div id="footer">
