Working on fixing the footer

--- a/sports/index.html
+++ b/sports/index.html
@@ -15,7 +15,7 @@
 	
 	<link rel="stylesheet" href="/~alex/Harbinger2/css/jquery.fancybox.css" type="text/css">
 	<link rel="stylesheet" href="css.css" type="text/css">
-	<link rel="stylesheet" href="/~alex/Harbinger2/css/all.css" type="text/css">
+	<link rel="stylesheet" href="../css/all.css" type="text/css">
 	<link rel="stylesheet" href="/~alex/Harbinger2/css/footer.css" type="text/css">
 	<link rel="stylesheet" href="/~alex/harbinger2/css/bootstrap.css" type="text/css">
 	<link rel="stylesheet" href="/~alex/Harbinger2/css/bootstrap-responsive.css" type="text/css">
