--- a/template.html
+++ b/template.html
@@ -42,13 +42,15 @@
 </head>
 
 <body>
+
+	<div id="content">
 	
-	<!--#include virtual="/~alex/Harbinger2/header.shtml"-->
+		<!--#include virtual="/~alex/Harbinger2/header.shtml"-->
 				
 		
+		<div id="footer_spacer"></div>
 		
-		
-		
+	</div><!-- end "content"-->
 		
 	<div id="footer">
 	
