Fixed issues with SimplePie, no longer relying on the cache

--- a/template.html
+++ b/template.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
 
 <head>
@@ -16,7 +16,7 @@
 	<link rel="stylesheet" href="/~alex/Harbinger2/css/bootstrap.css" type="text/css">
 	<link rel="stylesheet" href="/~alex/Harbinger2/css/bootstrap-responsive.css" type="text/css">
 	<link rel="stylesheet" href="/~alex/Harbinger2/css/jquery.fancybox.css" type="text/css">
-	<link rel="stylesheet" href="/~alex/Harbinger2/css/all.css" type="text/css">
+	<!-- <link rel="stylesheet" href="/~alex/Harbinger2/css/all.css" type="text/css">-->
 	<link rel="stylesheet" href="/~alex/Harbinger2/css/footer.css" type="text/css">
 	
 	<script src="/~alex/Harbinger2/js/jquery-1.8.0.min.js"></script>
@@ -39,16 +39,36 @@
 	
 	</script>
 	
+	<style type="text/css">
+	
+		body, html {
+			height: 100%;
+			margin: 0;
+		}
+	
+		#wrapper {
+			position: relative;
+			min-height: 100%;
+			height: auto !important;
+		}
+		
+		
+	
+	</style>
+	
 </head>
 
 <body>
 
-	<div id="content">
+	<div id="wrapper">
 	
 		<!--#include virtual="/~alex/Harbinger2/header.shtml"-->
-				
 		
-		<div id="footer_spacer"></div>
+		<div id="content">
+		
+			<h2>This is a test.</h2>
+		
+		</div>
 		
 	</div><!-- end "content"-->
 		
