--- a/template.html
+++ b/template.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -16,19 +16,15 @@
 	<link rel="stylesheet" href="/~alex/Harbinger2/css/bootstrap.css" type="text/css">
 	<link rel="stylesheet" href="/~alex/Harbinger2/css/bootstrap-responsive.css" type="text/css">
 	<link rel="stylesheet" href="/~alex/Harbinger2/css/jquery.fancybox.css" type="text/css">
-	<!-- <link rel="stylesheet" href="/~alex/Harbinger2/css/all.css" type="text/css">-->
+	<link rel="stylesheet" href="/~alex/Harbinger2/css/all.css" type="text/css">
 	<link rel="stylesheet" href="/~alex/Harbinger2/css/footer.css" type="text/css">
 	
 	<script src="/~alex/Harbinger2/js/jquery-1.8.0.min.js"></script>
 	<script src="/~alex/Harbinger2/js/bootstrap.js" type="text/javascript"></script>
 	<script src="/~alex/Harbinger2/js/jquery.fancybox.pack.js" type="text/javascript"></script>
-	<script src="/~alex/Harbinger2/js/jquery.mobile-1.2.0-alpha.1.min.js" type="text/javascript"></script>
-	
+		
 	<script type="text/javascript">
-	
-		// Disable jquery mobile loading message
-		$.mobile.loadingMessage = false;
-	
+			
 		// Fancybox
 		$(function() {
 			$('.fancy').fancybox({
@@ -41,40 +37,22 @@
 	
 	<style type="text/css">
 	
-		body, html {
-			height: 100%;
-			margin: 0;
-		}
-	
-		#wrapper {
-			position: relative;
-			min-height: 100%;
-			height: auto !important;
-		}
-		
-		
-	
+			
 	</style>
 	
 </head>
 
 <body>
 
-	<div id="wrapper">
+	<div id="content">
 	
 		<!--#include virtual="/~alex/Harbinger2/header.shtml"-->
-		
-		<div id="content">
-		
-			<h2>This is a test.</h2>
-		
-		</div>
-		
-	</div><!-- end "content"-->
-		
+	
+	</div>
+			
 	<div id="footer">
 	
-		<!--#include file="footer.shtml" -->
+		<!--#include virtual="/~alex/Harbinger2/footer.shtml" -->
 		
 		<div class="container" id="edited_by">
 			<div class="span6 offset6">
