--- a/sports/cross_country/crossc.html
+++ b/sports/cross_country/crossc.html
@@ -43,7 +43,11 @@
 	
 		<!--#include virtual="/~alex/Harbinger2/footer.shtml" -->
 		
-		<span id="edited_by">Last edited by Alex LaFroscia on July 18, 2012.</span>
+		<div class="container" id="edited_by">
+			<div class="span6 offset6">
+				<span id="edited_by">Last edited by Alex LaFroscia on August 22, 2012.</span>
+			</div><!-- end "span6" -->
+		</div><!-- end "edited_by" -->
 
 	</div>
 
