--- a/arts/index.html
+++ b/arts/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -43,7 +43,11 @@
 	
 		<!--#include virtual="/~alex/Harbinger2/footer.shtml" -->
 		
-		<span id="edited_by">Last edited by Alex LaFroscia on July 18, 2012.</span>
+		<div class="container" id="edited_by">
+			<div class="span6 offset6">
+				<span id="edited_by">Last edited by Alex LaFroscia on August 22, 2012.</span>
+			</div><!-- end "span6" -->
+		</div><!-- end "edited_by" -->
 
 	</div>
 
