Tweaked the header, working on fixing the footer placement

--- a/sports/index.html
+++ b/sports/index.html
@@ -26,9 +26,6 @@
 	
 	<script type="text/javascript">
 	
-		// Disable jquery mobile loading message
-		$.mobile.loadingMessage = false;
-	
 		// Fancybox
 		$(function() {
 			$('.fancy').fancybox({
@@ -91,8 +88,9 @@
 			</div><!-- end "container"-->
 		</div><!-- end "grey background" -->
 		
+		<div id="footer_spacer"></div>
+	
 	</div><!-- end "content" -->
-
 
 	<div id="footer">
 	
