Added full details to about half the clubs

--- a/clubs/Art Club/mini.html
+++ b/clubs/Art Club/mini.html
@@ -18,9 +18,11 @@
 
 	<h1>Art Club</h1>
 	
-	<p>Meets Twice Monthly</p>
+	<p>2nd & 4th Monday of every Month<br>2:30pm</p>
 	
-	<p>Advisor: Ms. Fleishman/Dewhirst</p>
+	<p>Room 106B</p>
+	
+	<p>Advisor: Ms. Devaney</p>
 
 </body>
 
