--- a/clubs/Athletes Helping Athletes/mini.html
+++ b/clubs/Athletes Helping Athletes/mini.html
@@ -18,9 +18,11 @@
 
 	<h1>Athletes Helping Athletes</h1>
 	
-	<p>Meets Twice Monthly</p>
+	<p>Meeting 10 times per year, Periods 1-4<br><em>See advisors for details</em></p>
 	
-	<p>Advisor: Ms. Fleishman/Dewhirst</p>
+	<p>Meets in the Multi Purpose Room</p>
+	
+	<p>Advisor: Ms. McGinty and Mr. Taylor</p>
 
 </body>
 
