--- a/clubs/Best Buddies/mini.html
+++ b/clubs/Best Buddies/mini.html
@@ -16,11 +16,13 @@
 
 <body>
 
-	<h1>Academic Club</h1>
+	<h1>Best Buddies</h1>
 	
-	<p>Meets Twice Monthly</p>
+	<p>Meets Monthly on Thursdays<br>3pm-5pm<br><em>See advisor for details</em></p>
 	
-	<p>Advisor: Ms. Fleishman/Dewhirst</p>
+	<p>Meets in the Senior Lounge/Room T20</p>
+	
+	<p>Advisor: Ms. Carroll / Ms. Ambrosio</p>
 
 </body>
 
