--- a/clubs/Council for Multicultural Unity/mini.html
+++ b/clubs/Council for Multicultural Unity/mini.html
@@ -16,11 +16,13 @@
 
 <body>
 
-	<h1>Academic Club</h1>
+	<h1>Council for Multicultural Unity</h1>
 	
-	<p>Meets Twice Monthly</p>
+	<p>Meets Alternating Tuesdays</p>
 	
-	<p>Advisor: Ms. Fleishman/Dewhirst</p>
+	<p>Meets in Room T11</p>
+	
+	<p>Advisors: Ms. LaMantia and Mr. Barrett</p>
 
 </body>
 
