--- a/clubs/DECA/mini.html
+++ b/clubs/DECA/mini.html
@@ -16,11 +16,11 @@
 
 <body>
 
-	<h1>Academic Club</h1>
+	<h1>DECA</h1>
 	
-	<p>Meets Twice Monthly</p>
+	<p>Meets Mondays at 2:30pm in Room T9</p>
 	
-	<p>Advisor: Ms. Fleishman/Dewhirst</p>
+	<p>Advisor: Ms. Pollard</p>
 
 </body>
 
