--- a/clubs/Engineering and Science Club/mini.html
+++ b/clubs/Engineering and Science Club/mini.html
@@ -16,11 +16,11 @@
 
 <body>
 
-	<h1>Academic Club</h1>
+	<h1>Engineering and Science Club</h1>
 	
-	<p>Meets Twice Monthly</p>
+	<p>Meets Mondays in Room 501</p>
 	
-	<p>Advisor: Ms. Fleishman/Dewhirst</p>
+	<p>Advisor: Mr. McInnes</p>
 
 </body>
 
