--- a/clubs/Environmental Club/mini.html
+++ b/clubs/Environmental Club/mini.html
@@ -16,11 +16,13 @@
 
 <body>
 
-	<h1>Academic Club</h1>
+	<h1>Environmental Club</h1>
 	
-	<p>Meets Twice Monthly</p>
+	<p>Meets the 2nd & 4th Tuesday every month<br>2:30pm</p>
 	
-	<p>Advisor: Ms. Fleishman/Dewhirst</p>
+	<p>Meets in Room T2</p>
+	
+	<p>Advisor: Mr. Flynn</p>
 
 </body>
 
