--- a/clubs/Forensics Club/mini.html
+++ b/clubs/Forensics Club/mini.html
@@ -16,11 +16,11 @@
 
 <body>
 
-	<h1>Academic Club</h1>
+	<h1>Forensics Club</h1>
 	
-	<p>Meets Twice Monthly</p>
+	<p>Meets Alternating Tuesdays in Room 506</p>
 	
-	<p>Advisor: Ms. Fleishman/Dewhirst</p>
+	<p>Advisor: Mr. Barrett</p>
 
 </body>
 
