--- a/clubs/French Club/mini.html
+++ b/clubs/French Club/mini.html
@@ -16,11 +16,11 @@
 
 <body>
 
-	<h1>Academic Club</h1>
+	<h1>French Club</h1>
 	
-	<p>Meets Twice Monthly</p>
+	<p>Meets Twice Monthly on Tuesdays in Room 213</p>
 	
-	<p>Advisor: Ms. Fleishman/Dewhirst</p>
+	<p>Advisor: Ms. D'Amore</p>
 
 </body>
 
