--- a/clubs/Future Educators Club/mini.html
+++ b/clubs/Future Educators Club/mini.html
@@ -16,11 +16,13 @@
 
 <body>
 
-	<h1>Academic Club</h1>
+	<h1>Future Educators' Club</h1>
 	
-	<p>Meets Twice Monthly</p>
+	<p>Meets Tuesdays, Once a Month<br>Officers @ 7am, Members @ 2:20pm</p>
 	
-	<p>Advisor: Ms. Fleishman/Dewhirst</p>
+	<p>Meets in Room T20</p>
+	
+	<p>Advisor: Ms. Turzer and Ms. Fleishman</p>
 
 </body>
 
