--- a/clubs/GSA/mini.html
+++ b/clubs/GSA/mini.html
@@ -16,11 +16,13 @@
 
 <body>
 
-	<h1>Academic Club</h1>
+	<h1>Gay/Straight Alliance</h1>
 	
-	<p>Meets Twice Monthly</p>
+	<p>Meets the 1st & 3rd Wednesday of the Month<br>2:30pm</p>
 	
-	<p>Advisor: Ms. Fleishman/Dewhirst</p>
+	<p>Meets in the Chorus Room</p>
+	
+	<p>Advisor: Ms. Koenig</p>
 
 </body>
 
