--- a/clubs/Global Justice/mini.html
+++ b/clubs/Global Justice/mini.html
@@ -16,11 +16,13 @@
 
 <body>
 
-	<h1>Academic Club</h1>
+	<h1>Global Justice</h1>
 	
-	<p>Meets Twice Monthly</p>
+	<p>Meets 1st & 3rd Thursday of the month<br>2:30pm</p>
 	
-	<p>Advisor: Ms. Fleishman/Dewhirst</p>
+	<p>Meets in Room 304</p>
+	
+	<p>Advisor: Ms. DaSilva-Burke</p>
 
 </body>
 
