--- a/clubs/Habitat/mini.html
+++ b/clubs/Habitat/mini.html
@@ -16,11 +16,13 @@
 
 <body>
 
-	<h1>Academic Club</h1>
+	<h1>Habitat for Humanity</h1>
 	
-	<p>Meets Twice Monthly</p>
+	<p>Meets 2nd & 4th Wednesday of the Month<br>2:30pm</p>
 	
-	<p>Advisor: Ms. Fleishman/Dewhirst</p>
+	<p>Meets in Room 212</p>
+	
+	<p>Advisor: Ms. Gold</p>
 
 </body>
 
