--- a/clubs/Harbinger/mini.html
+++ b/clubs/Harbinger/mini.html
@@ -16,11 +16,12 @@
 
 <body>
 
-	<h1>Academic Club</h1>
+	<h1 style="margin-bottom: 10px;">The Harbinger!!</h1>
+	<h3 style="margin-top: 0px;"><em>Journalism and MSG Media</em></h3>
 	
-	<p>Meets Twice Monthly</p>
+	<p>Meets <em>Every day</em> in the new Harbinger Media Center <br>(AKA the window'ed room on the right when heading toward the Math wing)</p>
 	
-	<p>Advisor: Ms. Fleishman/Dewhirst</p>
+	<p>Advisor: Mr. Ambrosio</p>
 
 </body>
 
