--- a/clubs/Caribbean Club/mini.html
+++ b/clubs/Caribbean Club/mini.html
@@ -18,9 +18,11 @@
 
 	<h1>Caribbean Club</h1>
 	
-	<p>Meets Twice Monthly</p>
+	<p>2nd & 4th Wednesday every Month<br>2:30pm - 3:30pm</p>
 	
-	<p>Advisor: Ms. Fleishman/Dewhirst</p>
+	<p>Meets in the Senior Lounge</p>
+	
+	<p>Advisor: Ms. Koenig</p>
 
 </body>
 
