--- a/clubs/Community Outreach Club/mini.html
+++ b/clubs/Community Outreach Club/mini.html
@@ -16,11 +16,11 @@
 
 <body>
 
-	<h1>Academic Club</h1>
+	<h1>Community Outreach Club</h1>
 	
-	<p>Meets Twice Monthly</p>
+	<p><em>TBA</em></p>
 	
-	<p>Advisor: Ms. Fleishman/Dewhirst</p>
+	<p>Advisor: Ms. Boba</p>
 
 </body>
 
