Fixed the weird height problem that was happening with the footer

--- a/template.html
+++ b/template.html
@@ -3,7 +3,7 @@
 
 <head>
 
-	<title>The Harbinger Online</title>
+	<title>Template</title>
 	
 	<!-- enable webapp on iPhone -->
 	<meta name="apple-mobile-web-app-capable" content="yes" />
@@ -37,6 +37,11 @@
 	
 	<style type="text/css">
 	
+		#test {
+			background: red;
+			display: block;
+			height: 1000px;
+		}
 			
 	</style>
 	
@@ -47,6 +52,8 @@
 	<div id="content">
 	
 		<!--#include virtual="/~alex/Harbinger2/header.shtml"-->
+		
+		<div id="test"> <p>test</p></div>
 	
 	</div>
 			
