--- a/clubs/index.html
+++ b/clubs/index.html
@@ -17,6 +17,7 @@
 	<script src="../js/jquery.fancybox.pack.js" type="text/javascript"></script>
 	<script src="/~alex/Harbinger2/js/bootstrap.min.js" type="text/javascript"></script>
 
+	<script src="http://ajax.googleapis.com/ajax/libs/chrome-frame/1/CFInstall.min.js"></script>
 	
 	<script type="text/javascript">
 	
