--- a/sports/index.html
+++ b/sports/index.html
@@ -13,6 +13,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<meta http-equiv="X-UA-Compatible" content="chrome=1">
 	
+	<script src="http://ajax.googleapis.com/ajax/libs/chrome-frame/1/CFInstall.min.js"></script>
+
 	<link rel="stylesheet" href="/~alex/Harbinger2/css/jquery.fancybox.css" type="text/css">
 	<link rel="stylesheet" href="css.css" type="text/css">
 	<link rel="stylesheet" href="../css/all.css" type="text/css">
@@ -23,7 +25,7 @@
 	<script src="../js/jquery-1.8.0.min.js"></script>
 	<script src="../js/bootstrap.js" type="text/javascript"></script>
 	<script src="../js/jquery.fancybox.pack.js" type="text/javascript"></script>
-	
+		
 	<script type="text/javascript">
 	
 		// Fancybox
@@ -89,11 +91,6 @@
 		</div><!-- end "grey background" -->
 				
 				<p><em>Note:</em> I know that these photos don't match their respective sports.  I know they're random.  Trust me.  I'll replace them with ones of our athletes as soon as I have them. Thanks.</p>
-				
-			</div><!-- end "sportsbox" -->
-		
-		</div><!-- end "horz_holder" -->
->>>>>>> master
 		
 		<div id="footer_spacer"></div>
 	
@@ -103,17 +100,13 @@
 	
 		<!--#include virtual="/~alex/Harbinger2/footer.shtml" -->
 		
-<<<<<<< HEAD
 		<div class="container" id="edited_by">
 			<div class="span6 offset6">
-				<span id="edited_by">Last edited by Alex LaFroscia on August 22, 2012.</span>
+				<span>Last edited by Alex LaFroscia on August 22, 2012.</span>
 			</div>
 		</div>
-=======
-		<span id="edited_by">Last edited by Alex LaFroscia on August 23, 2012.</span>
 
 	</div><!-- end "footer" -->
->>>>>>> master
 
 </body>
 
