--- a/sports/index.html
+++ b/sports/index.html
@@ -47,7 +47,7 @@
 		<!--#include virtual="/~alex/Harbinger2/header.shtml"-->
 		
 		<div id="grey_background">
-			<div class="container">
+			
 			
 				<div id="fallbox">
 					<div class="row">
@@ -86,11 +86,11 @@
 						<a href="golf/popup.html" class="fancy fancybox.iframe"><div class="sport span4">Golf</div></a>
 					</div><!-- end "row"-->
 				</div><!-- end "springbox" -->
-			
-			</div><!-- end "container"-->
-		</div><!-- end "grey background" -->
 				
-				<p><em>Note:</em> I know that these photos don't match their respective sports.  I know they're random.  Trust me.  I'll replace them with ones of our athletes as soon as I have them. Thanks.</p>
+				<p style="color: white;"><em>Note:</em> I know that these photos don't match their respective sports.  I know they're random.  Trust me.  I'll replace them with ones of our athletes as soon as I have them. Thanks.</p>
+
+			
+			</div><!-- end "grey background" -->
 		
 		<div id="footer_spacer"></div>
 	
