--- a/pages/getinvolved.html
+++ b/pages/getinvolved.html
@@ -9,6 +9,8 @@
 	<link rel="stylesheet" href="/~alex/Harbinger2/css/all.css" type="text/css">
 	<link rel="stylesheet" href="/~alex/Harbinger2/css/header.css" type="text/css">
 	<link rel="stylesheet" href="/~alex/Harbinger2/css/footer.css" type="text/css">
+	<link rel="stylesheet" href="/~alex/Harbinger2/css/bootstrap.css" type="text/css">
+	<link rel="stylesheet" href="/~alex/Harbinger2/css/bootstrap-responsive.css" type="text/css">
 	
 	<style type="text/css">
 
@@ -17,7 +19,7 @@
 			background-image:url(/~alex/Harbinger2/Background.png);
 		}
 		
-		#content {
+		#page {
 			width: 620px;
 			margin: 0 auto;
 			position: relative;
@@ -29,7 +31,6 @@
 			box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.18);
 			padding-left: 10px;
 			padding-right: 10px;
-			margin-bottom: 35px;
 		}
 		
 		h1 {
@@ -37,7 +38,7 @@
 			text-align: center;
 		}
 		
-		#content:before {
+		#page:before {
 			z-index: -1;
 			position: absolute;
 			top: -2px;
@@ -72,7 +73,7 @@
 	
 		<!--#include virtual="/~alex/Harbinger2/header.shtml"-->
 		
-		<div id="content">
+		<div id="page">
 		
 			<h1>Get Involved with <b>The Harbinger</b></h1>
 			
@@ -82,7 +83,7 @@
 				
 			<h2><em>"But I don't know how to do anything!"</em></h2>
 			
-				<em style="padding-left: 10px;">And to that, I say "Nonsense!"</em>
+				<em style="padding-left: 10px;">And to that, I say "Nonsense!"</em><br />
 			
 				<p>Nulla vitae elit libero, a pharetra augue. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cras mattis consectetur purus sit amet fermentum. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Vestibulum id ligula porta felis euismod semper.</p>
 				
@@ -95,20 +96,18 @@
 				<p> - Alex LaFroscia</p>
 		
 		</div>
-	
-	<div class="footer_spacer"></div>
+		
+		<div id="footer_spacer"></div>
 	
 	</div>
+
 	
-	<div class="footer">
+	<div id="footer">
 	
 		<!--#include virtual="/~alex/Harbinger2/footer.shtml" -->
 		
-		<span id="edited_by">Last edited by Alex LaFroscia on July 18, 2012.</span>
-
 	</div>
-
-
+	
 </body>
 
 </html>
