--- a/sports/index.html
+++ b/sports/index.html
@@ -14,7 +14,7 @@
 	<meta http-equiv="X-UA-Compatible" content="chrome=1">
 	
 	<script src="http://ajax.googleapis.com/ajax/libs/chrome-frame/1/CFInstall.min.js"></script>
-
+	
 	<link rel="stylesheet" href="/~alex/Harbinger2/css/jquery.fancybox.css" type="text/css">
 	<link rel="stylesheet" href="css.css" type="text/css">
 	<link rel="stylesheet" href="../css/all.css" type="text/css">
@@ -47,6 +47,8 @@
 		<!--#include virtual="/~alex/Harbinger2/header.shtml"-->
 		
 		<div id="grey_background">
+		
+			<div class="container">
 			
 			
 				<div id="fallbox">
@@ -89,8 +91,10 @@
 				
 				<p style="color: white;"><em>Note:</em> I know that these photos don't match their respective sports.  I know they're random.  Trust me.  I'll replace them with ones of our athletes as soon as I have them. Thanks.</p>
 
+
+			</div>
 			
-			</div><!-- end "grey background" -->
+		</div><!-- end "grey background" -->
 		
 		<div id="footer_spacer"></div>
 	
