--- a/sports/index.html
+++ b/sports/index.html
@@ -15,12 +15,12 @@
 	
 	<script src="http://ajax.googleapis.com/ajax/libs/chrome-frame/1/CFInstall.min.js"></script>
 	
-	<link rel="stylesheet" href="/~alex/Harbinger2/css/jquery.fancybox.css" type="text/css">
+	<link rel="stylesheet" href="/css/jquery.fancybox.css" type="text/css">
 	<link rel="stylesheet" href="css.css" type="text/css">
-	<link rel="stylesheet" href="../css/all.css" type="text/css">
-	<link rel="stylesheet" href="/~alex/Harbinger2/css/footer.css" type="text/css">
-	<link rel="stylesheet" href="/~alex/harbinger2/css/bootstrap.css" type="text/css">
-	<link rel="stylesheet" href="/~alex/Harbinger2/css/bootstrap-responsive.css" type="text/css">
+	<link rel="stylesheet" href="/css/all.css" type="text/css">
+	<link rel="stylesheet" href="/css/footer.css" type="text/css">
+	<link rel="stylesheet" href="/css/bootstrap.css" type="text/css">
+	<link rel="stylesheet" href="/css/bootstrap-responsive.css" type="text/css">
 	
 	<script src="../js/jquery-1.8.0.min.js"></script>
 	<script src="../js/bootstrap.js" type="text/javascript"></script>
@@ -44,7 +44,7 @@
 
 	<div id="content">
 	
-		<!--#include virtual="/~alex/Harbinger2/header.shtml"-->
+		<!--#include virtual="/header.shtml"-->
 		
 		<div id="grey_background">
 		
@@ -102,7 +102,7 @@
 
 	<div id="footer">
 	
-		<!--#include virtual="/~alex/Harbinger2/footer.shtml" -->
+		<!--#include virtual="/footer.shtml" -->
 		
 		<div class="container" id="edited_by">
 			<div class="span6 offset6">
