--- a/clubs/index.html
+++ b/clubs/index.html
@@ -72,6 +72,7 @@
 	
 		.span4 {
 			background: #e71919;
+			border: inset 1px solid black;
 		}
 	
 	</style>
@@ -334,12 +335,13 @@
 	
 		<!--#include virtual="/footer.shtml" -->
 		
-		<div class="container" id="edited_by">
-			<div class="span6 offset6">
-				<span id="edited_by">Last edited by Alex LaFroscia on August 22, 2012.</span>
+		<div class="container">
+			<div class="pull-right" style="margin-top: 20px;">
+					This page was last updated by Alex LaFroscia on September 2, 2012.
 			</div>
 		</div>
-	</div>
+		
+	</div><!-- end "footer" -->
 
 
 </body>
