--- a/template.html
+++ b/template.html
@@ -13,15 +13,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<meta http-equiv="X-UA-Compatible" content="chrome=1">
 	
-	<link rel="stylesheet" href="/~alex/Harbinger2/css/bootstrap.css" type="text/css">
-	<link rel="stylesheet" href="/~alex/Harbinger2/css/bootstrap-responsive.css" type="text/css">
-	<link rel="stylesheet" href="/~alex/Harbinger2/css/jquery.fancybox.css" type="text/css">
-	<link rel="stylesheet" href="/~alex/Harbinger2/css/all.css" type="text/css">
-	<link rel="stylesheet" href="/~alex/Harbinger2/css/footer.css" type="text/css">
+	<link rel="stylesheet" href="/css/bootstrap.css" type="text/css">
+	<link rel="stylesheet" href="/css/bootstrap-responsive.css" type="text/css">
+	<link rel="stylesheet" href="/css/jquery.fancybox.css" type="text/css">
+	<link rel="stylesheet" href="/css/all.css" type="text/css">
+	<link rel="stylesheet" href="/css/footer.css" type="text/css">
 	
-	<script src="/~alex/Harbinger2/js/jquery-1.8.0.min.js"></script>
-	<script src="/~alex/Harbinger2/js/bootstrap.js" type="text/javascript"></script>
-	<script src="/~alex/Harbinger2/js/jquery.fancybox.pack.js" type="text/javascript"></script>
+	<script src="/js/jquery-1.8.0.min.js"></script>
+	<script src="/js/bootstrap.js" type="text/javascript"></script>
+	<script src="/js/jquery.fancybox.pack.js" type="text/javascript"></script>
 		
 	<script type="text/javascript">
 			
@@ -40,7 +40,7 @@
 		#test {
 			background: red;
 			display: block;
-			height: 1000px;
+			height: 100px;
 		}
 			
 	</style>
@@ -51,7 +51,7 @@
 
 	<div id="content">
 	
-		<!--#include virtual="/~alex/Harbinger2/header.shtml"-->
+		<!--#include virtual="/header.shtml"-->
 		
 		<div id="test"> <p>test</p></div>
 	
@@ -59,11 +59,11 @@
 			
 	<div id="footer">
 	
-		<!--#include virtual="/~alex/Harbinger2/footer.shtml" -->
+		<!--#include virtual="/footer.shtml" -->
 		
-		<div class="container" id="edited_by">
-			<div class="span6 offset6">
-				<span id="edited_by">Last edited by Alex LaFroscia on August 22, 2012.</span>
+		<div class="container">
+			<div class="pull-right" style="margin-top: 20px;">
+					This page was last updated by Alex LaFroscia on September 5, 2012.
 			</div>
 		</div>
 	</div> <!-- end "footer" -->
