Fixed the navbar highlighting the wrong section. It now can be changed to highlight any of them.

--- a/clubs/index.html
+++ b/clubs/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-	<title>Template</title>
+	<title>Clubs</title>
 	
 	<!-- enable webapp on iPhone -->
 	<meta name="apple-mobile-web-app-capable" content="yes" />
@@ -31,6 +31,7 @@
 				'hideOnContentClick' : false,
 				'openEffect' : 'fade',
 			});
+			$('#nav_clubs').addClass('active');
 		});
 	
 	</script>
