--- a/sports/index.html
+++ b/sports/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-	<title>The Harbinger Online</title>
+	<title>HF Sports</title>
 	
 	<!-- enable webapp on iPhone -->
 	<meta name="apple-mobile-web-app-capable" content="yes" />
@@ -34,6 +34,7 @@
 				'hideOnContentClick' : false,
 				'openEffect' : 'fade',
 			});
+			$('#nav_sports').addClass('active');
 		});
 	
 	</script>
