--- a/clubs/index.html
+++ b/clubs/index.html
@@ -16,7 +16,7 @@
 	<link rel="stylesheet" href="/css/bootstrap.css" type="text/css">
 	<link rel="stylesheet" href="/css/bootstrap-responsive.css" type="text/css">
 	<link rel="stylesheet" href="/css/jquery.fancybox.css" type="text/css">
-	<!-- <link rel="stylesheet" href="/css/all.css" type="text/css"> -->
+	<link rel="stylesheet" href="/css/all.css" type="text/css">
 	<link rel="stylesheet" href="/css/footer.css" type="text/css">
 	
 	<script src="/js/jquery-1.8.0.min.js"></script>
@@ -40,34 +40,8 @@
 	
 		#page {
 			margin-top: 10px;
-			/*box-shadow: 0px 1px 9px 1px rgba(0,0,0,0.51);
-			-webkit-transform: rotate(.5deg);
-			-moz-transform: rotate(1deg);
-			-o-transform: rotate(1deg);
-			-ms-transform: rotate(1deg);
-			transform: rotate(1deg);
-			width: 100%;
-			height: 100%;
-			position: relative;*/
 		}
-		
-		/*#page-1 {
-			background: white;
-			box-shadow: 0px 1px 9px 1px rgba(0,0,0,0.51);
-			border: 1px solid rgba(0, 0, 0, 0.150);
-			-webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.19);
-			-moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.19);
-			box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.19);
-			-webkit-transform: rotate(359.5deg);
-			-moz-transform: rotate(359deg);
-			-o-transform: rotate(359deg);
-			-ms-transform: rotate(359deg);
-			transform: rotate(359deg);
-			margin-top: 10px;
-			position: relative;
-			top: -2;
-		}*/
-		
+				
 		.accordion-heading {
 			background: #ededed;
 		}
@@ -719,6 +693,8 @@
 				
 			</div>
 			</div><!-- end "tab-content" -->
+			
+			<div id="footer_spacer"></div>
 
 	</div><!-- end "content" -->
 			
