--- a/arts/index.html
+++ b/arts/index.html
@@ -5,11 +5,9 @@
 
 	<title>HHS - Arts</title>
 	
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
+	<script src="/js/jquery-1.8.0.min.js"></script>
 
 	<link rel="stylesheet" href="/~alex/Harbinger2/css/all.css" type="text/css">
-	<link rel="stylesheet" href="/~alex/Harbinger2/css/header.css" type="text/css">
-	<link rel="stylesheet" href="/~alex/Harbinger2/css/footer.css" type="text/css">
 	
 	<style type="text/css">
 
