--- a/clubs/index.html
+++ b/clubs/index.html
@@ -17,7 +17,6 @@
 	<link rel="stylesheet" href="/css/bootstrap-responsive.css" type="text/css">
 	<link rel="stylesheet" href="/css/jquery.fancybox.css" type="text/css">
 	<link rel="stylesheet" href="/css/all.css" type="text/css">
-	<link rel="stylesheet" href="/css/footer.css" type="text/css">
 	
 	<script src="/js/jquery-1.8.0.min.js"></script>
 	<script src="/js/bootstrap.js" type="text/javascript"></script>
@@ -38,8 +37,42 @@
 	
 	<style type="text/css">
 	
+		@media (max-width: 480px) {
+			#page {
+				padding-left: 0px !important;
+				padding-right: 0px !important;
+			}
+		}
+	
+		.nav li a {
+			color: #629b63;
+			background: inherit;
+		}
+		
+		.nav li {
+			background: inherit;
+		}
+	
+		.nav li :hover {
+			background: #eeeeee !important;
+			color: #416847;
+		}
+		
+		.nav > .active > a {
+			background: white !important;
+		}
+		
+		.nav-collapse > .nav > .active > a {
+			background: #629b63 !important;
+		}
+	
 		#page {
 			margin-top: 10px;
+			background: white;
+			margin-bottom: 10px;
+			padding-top: 5px;
+			padding-left: 10px;
+			padding-right: 10px;
 		}
 				
 		.accordion-heading {
@@ -96,7 +129,7 @@
 				<li><a href="#cservice" data-toggle="tab">Community Service</a></li>
 				<li><a href="#cultural" data-toggle="tab">Cultural</a></li>
 				<li><a href="#science" data-toggle="tab">Science</a></li>
-				<li><a href="sservices" data-toggle="tab">Student Services</a></li>
+				<li><a href="#sservices" data-toggle="tab">Student Services</a></li>
 			</ul>
 			
 			<div class="tab-content">
