--- a/pages/getinvolved.html
+++ b/pages/getinvolved.html
@@ -2,13 +2,11 @@
 
 <head>
 
-	<title></title>
+	<title>Get Involved</title>
 	
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
+	<script src="/js/jquery-1.8.0.min.js"></script>
 
 	<link rel="stylesheet" href="/~alex/Harbinger2/css/all.css" type="text/css">
-	<link rel="stylesheet" href="/~alex/Harbinger2/css/header.css" type="text/css">
-	<link rel="stylesheet" href="/~alex/Harbinger2/css/footer.css" type="text/css">
 	<link rel="stylesheet" href="/~alex/Harbinger2/css/bootstrap.css" type="text/css">
 	<link rel="stylesheet" href="/~alex/Harbinger2/css/bootstrap-responsive.css" type="text/css">
 	
