--- a/sports/girls_lax/glax.html
+++ b/sports/girls_lax/glax.html
@@ -4,11 +4,9 @@
 
 	<title>Girls' Lacrosse</title>
 	
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
+	<script src="/js/jquery-1.8.0.min.js"></script>
 
 	<link rel="stylesheet" href="/~alex/Harbinger2/css/all.css" type="text/css">
-	<link rel="stylesheet" href="/~alex/Harbinger2/css/header.css" type="text/css">
-	<link rel="stylesheet" href="/~alex/Harbinger2/css/footer.css" type="text/css">
 	<link rel="stylesheet" href="glax.css" type="text/css">
 	
 	<style type="text/css">
