--- a/sports/volleyball/volleyball.html
+++ b/sports/volleyball/volleyball.html
@@ -4,7 +4,7 @@
 
 	<title>Volleyball</title>
 	
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
+	<script src="/js/jquery-1.8.0.min.js"></script>
 
 	<link rel="stylesheet" href="/~alex/Harbinger2/css/all.css" type="text/css">
 	<link rel="stylesheet" href="volleyball.css" type="text/css">
