--- a/sports/winter_track/wtrack.html
+++ b/sports/winter_track/wtrack.html
@@ -4,7 +4,7 @@
 
 	<title>Winter Track</title>
 	
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
+	<script src="/js/jquery-1.8.0.min.js"></script>
 
 	<link rel="stylesheet" href="/~alex/Harbinger2/css/all.css" type="text/css">
 	<link rel="stylesheet" href="wtrack.css" types="text/css">
