Fixed a color thing on in the Mobile navbar

--- a/clubs/index.html
+++ b/clubs/index.html
@@ -160,7 +160,7 @@
 									<div class="span5">
 										<img src="http://placehold.it/300x200" class="image" />
 									</div>
-									<div class="description span6"> Donec sed odio dui. Vestibulum id ligula porta felis euismod semper.</div>
+									<div class="description span6"> Donec id elit non mi porta gravida at eget metus. Aenean lacinia bibendum nulla sed consectetur. Aenean lacinia bibendum nulla sed consectetur. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</div>
 								</div>
 							</div>
 						</div>
@@ -180,7 +180,7 @@
 									<div class="span5">
 										<img src="http://placehold.it/300x200" class="image" />
 									</div>
-									<div class="description span6"> Donec sed odio dui. Vestibulum id ligula porta felis euismod semper.</div>
+									<div class="description span6"> Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Sed posuere consectetur est at lobortis. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas faucibus mollis interdum.</div>
 								</div>
 							</div>
 						</div>
@@ -200,7 +200,7 @@
 									<div class="span5">
 										<img src="http://placehold.it/300x200" class="image" />
 									</div>
-									<div class="description span6"> Donec sed odio dui. Vestibulum id ligula porta felis euismod semper.</div>
+									<div class="description span6"> Cras justo odio, dapibus ac facilisis in, egestas eget quam. Maecenas faucibus mollis interdum. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</div>
 								</div>
 							</div>
 						</div>
@@ -220,7 +220,7 @@
 									<div class="span5">
 										<img src="http://placehold.it/300x200" class="image" />
 									</div>
-									<div class="description span6"> Donec sed odio dui. Vestibulum id ligula porta felis euismod semper.</div>
+									<div class="description span6">Donec ullamcorper nulla non metus auctor fringilla. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Etiam porta sem malesuada magna mollis euismod. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cras mattis consectetur purus sit amet fermentum.</div>
 								</div>
 							</div>
 						</div>
@@ -240,7 +240,7 @@
 									<div class="span5">
 										<img src="http://placehold.it/300x200" class="image" />
 									</div>
-									<div class="description span6"> Donec sed odio dui. Vestibulum id ligula porta felis euismod semper.</div>
+									<div class="description span6">Etiam porta sem malesuada magna mollis euismod. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</div>
 								</div>
 							</div>
 						</div>
@@ -260,7 +260,7 @@
 									<div class="span5">
 										<img src="http://placehold.it/300x200" class="image" />
 									</div>
-									<div class="description span6"> Donec sed odio dui. Vestibulum id ligula porta felis euismod semper.</div>
+									<div class="description span6">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas faucibus mollis interdum. Nulla vitae elit libero, a pharetra augue. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Maecenas sed diam eget risus varius blandit sit amet non magna.</div>
 								</div>
 							</div>
 						</div>
@@ -280,7 +280,7 @@
 									<div class="span5">
 										<img src="http://placehold.it/300x200" class="image" />
 									</div>
-									<div class="description span6"> Donec sed odio dui. Vestibulum id ligula porta felis euismod semper.</div>
+									<div class="description span6">Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vestibulum id ligula porta felis euismod semper. Aenean lacinia bibendum nulla sed consectetur. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</div>
 								</div>
 							</div>
 						</div>
@@ -308,7 +308,7 @@
 									<div class="span5">
 										<img src="http://placehold.it/300x200" class="image" />
 									</div>
-									<div class="description span6"> Donec sed odio dui. Vestibulum id ligula porta felis euismod semper.</div>
+									<div class="description span6">Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas sed diam eget risus varius blandit sit amet non magna. Etiam porta sem malesuada magna mollis euismod. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
 								</div>
 							</div>
 						</div>
@@ -348,7 +348,7 @@
 									<div class="span5">
 										<img src="http://placehold.it/300x200" class="image" />
 									</div>
-									<div class="description span6"> Donec sed odio dui. Vestibulum id ligula porta felis euismod semper.</div>
+									<div class="description span6">Maecenas sed diam eget risus varius blandit sit amet non magna. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nulla vitae elit libero, a pharetra augue. Nullam id dolor id nibh ultricies vehicula ut id elit. Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus.</div>
 								</div>
 							</div>
 						</div>
