Fixed some stuff

--- a/clubs/index.html
+++ b/clubs/index.html
@@ -120,7 +120,7 @@
 
 	<div id="content">
 	
-		<!--#include virtual="../assets/header.shtml" -->
+		<!--#include file="../tools/header.shtml" -->
 		
 		<div id="page" class="container">
 		
