--- a/template.html
+++ b/template.html
@@ -50,7 +50,7 @@
 
 	<div id="content">
 	
-		<!--#include virtual="/header.shtml"-->
+		<!--#include file="header.shtml"-->
 		
 		<div id="test"> <p>test</p></div>
 	
@@ -58,7 +58,7 @@
 			
 	<div id="footer">
 	
-		<!--#include virtual="/footer.shtml" -->
+		<!--#include file="footer.shtml" -->
 		
 		<div class="container">
 			<div class="pull-right" style="margin-top: 20px;">
