Fixed the SSIs not working properly Fixed the paper background not loading properly

--- a/clubs/index.html
+++ b/clubs/index.html
@@ -736,7 +736,7 @@ The club also attends workshops and conferences at area colleges that are design
 			
 	<div id="footer">
 	
-		<!--#include virtual="/footer.shtml" -->
+		<!--#include file="../tools/footer.shtml" -->
 		
 		<div class="container">
 			<div class="pull-right" style="margin-top: 20px;">
