Lots of changes to improve how things work on the server

--- a/clubs/index.html
+++ b/clubs/index.html
@@ -9,20 +9,20 @@
 	
 	<!-- enable webapp on iPhone -->
 	<meta name="apple-mobile-web-app-capable" content="yes" />
-	<link rel="apple-touch-icon" href="/img/Apple-Icon.png" />
-	<link rel="apple-touch-icon" sizes="114x114" href="/img/Apple-Icon-Retina.png" />
+	<link rel="apple-touch-icon" href="/harbingernews/img/Apple-Icon.png" />
+	<link rel="apple-touch-icon" sizes="114x114" href="/harbingernews/img/Apple-Icon-Retina.png" />
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<meta http-equiv="X-UA-Compatible" content="chrome=1">
 	
-	<link rel="stylesheet" href="../css/bootstrap.css" type="text/css">
-	<link rel="stylesheet" href="../css/bootstrap-responsive.css" type="text/css">
-	<link rel="stylesheet" href="../css/jquery.fancybox.css" type="text/css">
-	<link rel="stylesheet" href="../css/all.css" type="text/css">
+	<link rel="stylesheet" href="/harbingernews/css/bootstrap.css" type="text/css">
+	<link rel="stylesheet" href="/harbingernews/css/bootstrap-responsive.css" type="text/css">
+	<link rel="stylesheet" href="/harbingernews/css/jquery.fancybox.css" type="text/css">
+	<link rel="stylesheet" href="/harbingernews/css/all.css" type="text/css">
 	
-	<script src="../js/jquery-1.8.0.min.js"></script>
-	<script src="../js/bootstrap.js" type="text/javascript"></script>
-	<script src="../js/jquery.fancybox.pack.js" type="text/javascript"></script>
+	<script src="/harbingernews/js/jquery-1.8.0.min.js"></script>
+	<script src="/harbingernews/js/bootstrap.js" type="text/javascript"></script>
+	<script src="/harbingernews/js/jquery.fancybox.pack.js" type="text/javascript"></script>
 		
 	<script type="text/javascript">
 			
@@ -120,7 +120,7 @@
 
 	<div id="content">
 	
-		<!--#include file="../tools/header.shtml" -->
+		<!--#include virtual="/harbingernews/tools/header.shtml"-->
 		
 		<div id="page" class="container">
 		
@@ -736,7 +736,7 @@ The club also attends workshops and conferences at area colleges that are design
 			
 	<div id="footer">
 	
-		<!--#include file="../tools/footer.shtml" -->
+		<!--#include virtual="/harbingernews/tools/footer.shtml"-->
 		
 		<div class="container">
 			<div class="pull-right" style="margin-top: 20px;">
