--- a/template.html
+++ b/template.html
@@ -13,14 +13,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<meta http-equiv="X-UA-Compatible" content="chrome=1">
 	
-	<link rel="stylesheet" href="/css/bootstrap.css" type="text/css">
-	<link rel="stylesheet" href="/css/bootstrap-responsive.css" type="text/css">
-	<link rel="stylesheet" href="/css/jquery.fancybox.css" type="text/css">
-	<link rel="stylesheet" href="/css/all.css" type="text/css">
+	<link rel="stylesheet" href="/harbingernews/css/bootstrap.css" type="text/css">
+	<link rel="stylesheet" href="/harbingernews/css/bootstrap-responsive.css" type="text/css">
+	<link rel="stylesheet" href="/harbingernews/css/jquery.fancybox.css" type="text/css">
+	<link rel="stylesheet" href="/harbingernews/css/all.css" type="text/css">
 	
-	<script src="/js/jquery-1.8.0.min.js"></script>
-	<script src="/js/bootstrap.js" type="text/javascript"></script>
-	<script src="/js/jquery.fancybox.pack.js" type="text/javascript"></script>
+	<script src="/harbingernews/js/jquery-1.8.0.min.js"></script>
+	<script src="/harbingernews/js/bootstrap.js" type="text/javascript"></script>
+	<script src="/harbingernews/js/jquery.fancybox.pack.js" type="text/javascript"></script>
 		
 	<script type="text/javascript">
 			
@@ -50,7 +50,7 @@
 
 	<div id="content">
 	
-		<!--#include file="header.shtml"-->
+		<!--#include virtual="/harbingernews/tools/header.shtml"-->
 		
 		<div id="test"> <p>test</p></div>
 	
@@ -58,7 +58,7 @@
 			
 	<div id="footer">
 	
-		<!--#include file="footer.shtml" -->
+		<!--#include virtual="/harbingernews/tools/footer.shtml" -->
 		
 		<div class="container">
 			<div class="pull-right" style="margin-top: 20px;">
