Fixed the Get Involved page

--- a/harbingernews/pages/getinvolved.html
+++ b/harbingernews/pages/getinvolved.html
@@ -4,11 +4,11 @@
 
 	<title>Get Involved</title>
 	
-	<script src="/js/jquery-1.8.0.min.js"></script>
+	<script src="/harbingernews/js/jquery-1.8.0.min.js"></script>
 
-	<link rel="stylesheet" href="/~alex/Harbinger2/css/all.css" type="text/css">
-	<link rel="stylesheet" href="/~alex/Harbinger2/css/bootstrap.css" type="text/css">
-	<link rel="stylesheet" href="/~alex/Harbinger2/css/bootstrap-responsive.css" type="text/css">
+	<link rel="stylesheet" href="/harbingernews/css/all.css" type="text/css">
+	<link rel="stylesheet" href="/harbingernews/css/bootstrap.css" type="text/css">
+	<link rel="stylesheet" href="/harbingernews/css/bootstrap-responsive.css" type="text/css">
 	
 	<style type="text/css">
 
@@ -29,6 +29,7 @@
 			box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.18);
 			padding-left: 10px;
 			padding-right: 10px;
+			margin-bottom: 30px;
 		}
 		
 		h1 {
@@ -67,9 +68,9 @@
 
 <body>
 
-	<div class="content">
+	<div id="content">
 	
-		<!--#include virtual="/~alex/Harbinger2/header.shtml"-->
+		<!--#include virtual="/Harbingernews/tools/header.shtml"-->
 		
 		<div id="page">
 		
@@ -102,7 +103,7 @@
 	
 	<div id="footer">
 	
-		<!--#include virtual="/~alex/Harbinger2/footer.shtml" -->
+		<!--#include virtual="/Harbingernews/tools/footer.shtml" -->
 		
 	</div>
 	
