Fixed the template to always refer to the proper footer and header include files

--- a/harbingernews/template.html
+++ b/harbingernews/template.html
@@ -49,14 +49,14 @@
 
 	<div id="content">
 		
-		  <!--#include virtual="tools/header.shtml"-->
+		  <!--#include virtual="/harbingernews/tools/header.shtml"-->
 		
 			<h1 align="center">This is a test.</h1>
 			<!-- DO NOT EDIT ANYTHING BELOW THIS LINE OTHER THAN YOUR NAME AND THE DATE -->	
 	</div>		
 	<div id="footer">
 	
-		<!--#include virtual="tools/footer.shtml" -->
+		<!--#include virtual="/harbingernews/tools/footer.shtml" -->
 		
 		<div class="container">
 			<div class="pull-right" style="margin-top: 20px;">
