--- a/sports/index.html
+++ b/sports/index.html
@@ -83,7 +83,7 @@
 			<div class="row">
 				<div class="span8">
 					<div class="tab-content">
-						<div class="tab-pane active" id="fall">
+						<div class="tab-pane" id="fall">
 							<div class="sport" id="cheerleading">
 								<div class="inner">
 									<h2>Cheerleading</h2>
@@ -217,7 +217,7 @@
 							
 						</div><!-- end "fall" -->
 						
-						<div class="tab-pane" id="winter">
+						<div class="tab-pane active" id="winter">
 							<div class="sport" id="bbasketball">
 								<div class="inner">
 									<h2>Basketball (Boys)</h2>
